debug alignment issues

--- a/src/app/success-modeling/success-model/success-dimension/success-dimension.component.scss
+++ b/src/app/success-modeling/success-model/success-dimension/success-dimension.component.scss
@@ -6,9 +6,6 @@ mat-icon[mat-card-avatar] {
   font-size: 40px;
 }
 
-#push-right {
-  flex-grow: 1;
-}
 
 
 
