--- a/src/app/success-modeling/success-model/success-dimension/success-factor/success-factor.component.scss
+++ b/src/app/success-modeling/success-model/success-dimension/success-factor/success-factor.component.scss
@@ -1,25 +1,7 @@
 
 
-h3 {
-  font-weight: 500;
-}
 
-.measure {
-  display: flex;
 
-  button {
-    margin-top: 5px;
-  }
-
-  app-success-measure {
-    width: 100%;
-  }
-}
-
-#add-measure-button {
-  width: 100%;
-  margin-top: 10px;
-}
 
 #factor-header {
   display: flex;
@@ -27,4 +9,5 @@ h3 {
   #edit-button {
     margin-top: 5px;
   }
+
 }
